--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
 /*  your css code here. If applicable */
+#container {
+	width: 80%;
+	margin: auto;
+	border: 2px solid #000;
+	text-align: center;
+}
+.verification_subtext {
+	font-size: 14px;
+}
